# AutoFormFiller

./: .gitignore  AFF.py  AutoFormFiller.py  README.md  autoprint.py  autosave_families.json  bd_fill.py  ideas.txt  install.bat  main.py  mass_processor_config.json  pyproject.toml  requirements.txt  run.bat  setup.py  test_credentials.json  test_full_auto_config.py  test_get_spreadsheet_id.py  test_highlight_fix.py  test_logic_only.py  test_save_spreadsheet_id.py
AutoFormFiller/: families_template.json  family_creator_config.json  launcher_config.json  processing_statistics.json
AutoFormFiller_Install/: mass_processor_config.json
Install/: install_linux.sh  install_linux_redos.sh  install_windows.bat
Installer/: 10Вышневолоцкий ГО_Многодетные.xls  README.md  __init__.py  autosave_families.json  chrome_driver_helper.py  database_client.bat  family_system_launcher.py  install_linux_redos.sh  install_system.py  installer.py  json_family_creator.py  launcher_config.json  massform.py  old_browser_support.md  quick_installer.py  requirements.txt  simple_installer.py  Итоговый реестр установки, если Вам понадобится НАШ 94 утратили (3) (1).xlsx
color_sorter/: README.md  __main__.py  create_test_xlsx.py  debug_colors.py  example_usage.py  gui_color_sorter.py  sort_by_colors.py  sort_families_by_colors.py  АСП_Многодетные (3).xlsx
common/: __init__.py  gui_components.py
debris/: auto_saved_families.json
documentation/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  FEATURES.md  GIT_WORKFLOW.md  HIGHLIGHT_FIXES.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  (+1 more)
(+63 files in other folders)
